# sysdll

./: .gitignore  CMakeLists.txt  Makefile  README.md  exports.def
asm/: peb.asm  syscall.asm
github/workflows/: release.yml
include/: sys_structs.h  syscall.h  sysdll.h
include/memory/: mem.h
include/nsyscall/: nsyscall.h  peb.h  syscall_list.h
src/: main.c  sysdll.c
src/memory/: mem.c
src/nsyscall/: nsyscall.c
